// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<SelectionChip /> > ControlledChecked story renders snapshot 1`] = `
<label
  class="_selection-chip_b63b89 _selection-chip--has-icon_b63b89"
  for=":r5:"
>
  <input
    checked=""
    class="_selection-chip__input_b63b89"
    id=":r5:"
    type="checkbox"
  />
  <div
    class="_selection-chip__body_b63b89"
  >
    <svg
      aria-hidden="true"
      class="_icon_779da8"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11.25 20.5V12.75H3.5V11.25H11.25V3.5H12.75V11.25H20.5V12.75H12.75V20.5H11.25Z"
      />
    </svg>
    <span
      class="_text_b3eba3 _text--label-lg_b3eba3 _selection-chip__label_b63b89"
    >
      Label
    </span>
  </div>
</label>
`;

exports[`<SelectionChip /> > Default story renders snapshot 1`] = `
<label
  class="_selection-chip_b63b89"
  for=":r0:"
>
  <input
    class="_selection-chip__input_b63b89"
    id=":r0:"
    type="checkbox"
  />
  <div
    class="_selection-chip__body_b63b89"
  >
    <span
      class="_text_b3eba3 _text--label-lg_b3eba3 _selection-chip__label_b63b89"
    >
      Label
    </span>
  </div>
</label>
`;

exports[`<SelectionChip /> > Disabled story renders snapshot 1`] = `
<label
  class="_selection-chip_b63b89 _selection-chip--disabled_b63b89"
  for=":r3:"
>
  <input
    class="_selection-chip__input_b63b89"
    disabled=""
    id=":r3:"
    type="checkbox"
  />
  <div
    class="_selection-chip__body_b63b89"
  >
    <span
      class="_text_b3eba3 _text--label-lg_b3eba3 _selection-chip__label_b63b89"
    >
      Label
    </span>
  </div>
</label>
`;

exports[`<SelectionChip /> > DisabledSelected story renders snapshot 1`] = `
<label
  class="_selection-chip_b63b89 _selection-chip--disabled_b63b89"
  for=":r4:"
>
  <input
    checked=""
    class="_selection-chip__input_b63b89"
    disabled=""
    id=":r4:"
    type="checkbox"
  />
  <div
    class="_selection-chip__body_b63b89"
  >
    <span
      class="_text_b3eba3 _text--label-lg_b3eba3 _selection-chip__label_b63b89"
    >
      Label
    </span>
  </div>
</label>
`;

exports[`<SelectionChip /> > Selected story renders snapshot 1`] = `
<label
  class="_selection-chip_b63b89"
  for=":r1:"
>
  <input
    checked=""
    class="_selection-chip__input_b63b89"
    id=":r1:"
    type="checkbox"
  />
  <div
    class="_selection-chip__body_b63b89"
  >
    <span
      class="_text_b3eba3 _text--label-lg_b3eba3 _selection-chip__label_b63b89"
    >
      Label
    </span>
  </div>
</label>
`;

exports[`<SelectionChip /> > UncontrolledChecked story renders snapshot 1`] = `
<label
  class="_selection-chip_b63b89 _selection-chip--has-icon_b63b89"
  for=":r6:"
>
  <input
    checked=""
    class="_selection-chip__input_b63b89"
    id=":r6:"
    type="checkbox"
  />
  <div
    class="_selection-chip__body_b63b89"
  >
    <svg
      aria-hidden="true"
      class="_icon_779da8"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11.25 20.5V12.75H3.5V11.25H11.25V3.5H12.75V11.25H20.5V12.75H12.75V20.5H11.25Z"
      />
    </svg>
    <span
      class="_text_b3eba3 _text--label-lg_b3eba3 _selection-chip__label_b63b89"
    >
      Label
    </span>
  </div>
</label>
`;

exports[`<SelectionChip /> > WithIcon story renders snapshot 1`] = `
<label
  class="_selection-chip_b63b89 _selection-chip--has-icon_b63b89"
  for=":r2:"
>
  <input
    class="_selection-chip__input_b63b89"
    id=":r2:"
    type="checkbox"
  />
  <div
    class="_selection-chip__body_b63b89"
  >
    <svg
      aria-hidden="true"
      class="_icon_779da8"
      fill="currentColor"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11.25 20.5V12.75H3.5V11.25H11.25V3.5H12.75V11.25H20.5V12.75H12.75V20.5H11.25Z"
      />
    </svg>
    <span
      class="_text_b3eba3 _text--label-lg_b3eba3 _selection-chip__label_b63b89"
    >
      Label
    </span>
  </div>
</label>
`;
